# dataviva-desafio

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/dataviva_desafio/: __init__.py  __main__.py  desafio1_fizzbuzz.py  desafio2_palindromo.py  desafio3_duplicados.py  desafio4_parenteses.py  desafio5_agrupamento.py
src/dataviva_desafio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_99_cobertura.py  test_desafios.py  test_execucao.py
